# dnd_sim

./: .gitignore  AGENTS.md  README.md  example.py  pyproject.toml
.github/: pull_request_template.md
data/: dnd_sim.db
docs/: agent_feature_assignments.md  agent_index.yaml  encounter_schema_full_example.json  plan.md  review_checklist.md
scripts/: audit_party_features.py  backfill_monster_entries.py  backlog_ready_tasks.sh  check_wave_status_column.sh  gemini_parser.py  launch_wave_agents.sh  mechanics_coverage.py  migrate_to_sqlite.py  oss_parser.py  wave_backlog_status.sh
tests/: helpers.py  runtime_test_support.py  test_action_legality_integration.py  test_action_legality_unit.py  test_action_resolution_pipeline.py  test_adventuring_day_flow.py  test_agent_maintenance_contracts.py  test_ai_benchmarks.py  test_ai_candidate_enumeration.py  test_ai_control_scoring.py  test_ai_objective_scoring.py  test_ai_rationale_traces.py  test_ai_spatial_scoring.py  test_ai_timing_scoring.py  test_aoe_geometry.py  test_artificer_mechanics.py  test_attack_replacement.py  test_barbarian_mechanics.py  test_bard_mechanics.py  test_bug_10_condition_semantics.py  test_calibration.py  test_campaign_persistence.py  test_campaign_sequencing.py  test_capability_gates.py  test_capability_manifest_schema.py  test_capability_report.py  test_character_sheet_hydration.py  test_characters_multiclass.py  test_chr01_multiclass_integration.py  test_chr01_multiclass_negative.py  test_chr03_unified_hooks.py  test_chr04_barbarian_package.py  test_chr05_bard_package.py  test_chr06_cleric_package.py  (+161 more)
(+2912 files in other folders)
